--- a/Swipe/app/src/main/AndroidManifest.xml
+++ b/Swipe/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.SettingActivity"/>
 
         <service
             android:name=".SwipeSensorService"
@@ -28,7 +29,7 @@
             android:exported="true"></service>
 
 
-        <receiver android:name=".ShutdownAdminReceiver"
+        <receiver android:name=".controller.ShutdownAdminReceiver"
             android:label="@string/sample_device_admin"
             android:description="@string/sample_device_admin_description"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
