--- a/Swipe/app/src/main/AndroidManifest.xml
+++ b/Swipe/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.SettingActivity"/>
+        <activity android:name=".controller.NotificationController"/>
 
         <service
             android:name=".SwipeSensorService"
