[기능구현] Notification 버튼 클릭 이벤트 구현

--- a/Swipe/app/src/main/AndroidManifest.xml
+++ b/Swipe/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity android:name=".view.SettingActivity"/>
         <activity android:name=".controller.NotificationController"/>
 
+        <receiver android:name=".controller.NotificationController$switchButtonListener" />
+
         <service
             android:name=".SwipeSensorService"
             android:enabled="true"
